--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Port</title>
+	<title>Jack Pound Jr</title>
+	<link rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel='stylesheet' href='./styles/styles.css'>
 </head>
 <body>
-	<h1>Yello World</h1>
+	<h1 class="pageHead">Jack Pound Jr</h1>
+	<div class="container">
+		<div class="row">
+			<div class="col-12 navList">
+				<a href="#" class="btn btn-info">Home</a>
+				<a href="#" class="btn btn-info">About</a>
+				<a href="#" class="btn btn-info">Projects</a>
+				<a href="#" class="btn btn-info">Resume</a>
+				<a href="#" class="btn btn-info">Contact</a>
+			</div>
+		</div>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="./scripts/app.js"></script>
 </body>
 </html>
