--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 	<link rel='stylesheet' href='./styles/styles.css'>
 </head>
 <body>
-	<h1 class="pageHead">Jack Pound Jr</h1>
+	<h1 class="pageHead">Completed and current projects</h1>
 	<div class="container">
 		<div class="row">
 			<div class="col-12 navList">
