--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 		</div>
 	</div>
 	<footer class="footer">
-		<p>Jack Pound Jr <a href="https://github.com/JackPound">Github</a></p>
+		<p>&copy; Jack Pound Jr | <a href="https://github.com/JackPound">Github</a> | <a href="https://www.linkedin.com/in/jackpound/">LinkedIn</a></p>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="./scripts/app.js"></script>
