--- a/index.html
+++ b/index.html
@@ -19,21 +19,11 @@
 		</div>
 		<div class="row">
 			<div class="col-6">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<p>Picture of me here, maybe 
 				</p>
 			</div>
 			<div class="col-6">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				<p>I am a full stack web developer who is motivated by exploring the constantly evolving landscape of software development. I love learning and applying new concepts to projects. I also value the back and forth nature of developing a project alongside others, learning from their strengths and sharing my own. Nothing is more satisfying than creating or finding a tool that solves a long standing problem!
 				</p>
 			</div>
 		</div>
