--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel='stylesheet' href='./styles/styles.css'>
 </head>
 <body>
+	<h1>Under maintenance, stay tuned </h1> 
+</body>
+<!-- <body>
 	<h1 class="pageHead">Jack Pound Jr</h1>
 	<div class="container">
 		<div class="row">
@@ -33,5 +36,5 @@
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="./scripts/app.js"></script>
-</body>
+</body> -->
 </html>
