sidebar work, adding contact icons ie gh, li

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
 					</ul>
 				</div>
 				<div class="small-contact-icon">
-					<p>Small contact icon area</p>
+					<div class="icon-link"><a href="https://www.linkedin.com/in/jackpound/">LI</a>
+					</div>
+					<div class="icon-link gh-link"><a href="https://github.com/JackPound"></a>
+					</div>					
+					<div class="icon-link"><a href="#">EM</a>
+					</div>
 				</div>
 				<div class="aside-footer">
 				<p>&copy; 2018 | Jack Pound Jr</p>
