--- a/index.html
+++ b/index.html
@@ -11,55 +11,59 @@
 		<h1>Under maintenance, stay tuned </h1> 
 	</body> -->
 	<body>
-		<aside class="left-bar">
-			<div class="color-filter">
-				<div class="portrait">
-					<img src="./images/closeup.jpg">
-					<p class="my-name">Jack Pound Jr</p>
-					<p class="job-title">Full-Stack Web Dev</p>
-				</div>
-				<div class="navigation">
-					<ul class="nav-links">
-						<li><a href="#brand">My Brand</a></li>
-						<li><a href="#skills">Skills</a></li>
-						<li><a href="#projects">Projects</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</div>
-				<div class="small-contact-icon">
-					<div class="icon-link"><a href="https://www.linkedin.com/in/jackpound/">LI</a>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-2">
+					<div class="color-filter">
+						<div class="portrait">
+							<!-- <img src="./images/closeup.jpg"> -->
+							<p class="my-name">Jack Pound Jr</p>
+							<p class="job-title">Full-Stack Web Dev</p>
+						</div>
+						<div class="navigation">
+							<ul class="nav-links">
+								<li><a href="#brand">My Brand</a></li>
+								<li><a href="#skills">Skills</a></li>
+								<li><a href="#projects">Projects</a></li>
+								<li><a href="#about">About</a></li>
+								<li><a href="#contact">Contact</a></li>
+							</ul>
+						</div>
+						<div class="small-contact-icon">
+							<div class="icon-link"><a href="https://www.linkedin.com/in/jackpound/">LI</a>
+							</div>
+							<div class="icon-link gh-link"><a href="https://github.com/JackPound">GH</a>
+							</div>					
+							<div class="icon-link"><a href="#">EM</a>
+							</div>
+						</div>
+						<div class="aside-footer">
+						<p>&copy; 2018 | Jack Pound Jr</p>
+						</div>
 					</div>
-					<div class="icon-link gh-link"><a href="https://github.com/JackPound">GH</a>
-					</div>					
-					<div class="icon-link"><a href="#">EM</a>
-					</div>
 				</div>
-				<div class="aside-footer">
-				<p>&copy; 2018 | Jack Pound Jr</p>
+				<div class="col-sm">
+					<h3 id="brand">My Brand</h3>
+					<p>I am a full stack web developer who is motivated by exploring the constantly evolving landscape of software development. I love learning and applying new concepts to projects. I also value the back and forth nature of developing a project alongside others, learning from their strengths and sharing my own. Nothing is more satisfying than creating or finding a tool that solves a long standing problem!</p>
+					<h3 id="projects">Projects</h3>
+					<p>List of projects with screenshots and snippets</p>
+					<p>rat smasher deluxe, gamers unite, pack-a-pack</p>
+					<h3 id="skills">Skills</h3>
+					<p>List of skills and projects referenced</p>
+					<p>Resume</p>
+					<p>jquery, javascript, html5, css3, bootstrap, react, python, django, postgresql, django, github, node.js</p>
+					<h3 id="about">About Me</h3>
+					<p>More fun oriented section of about me</p>
+					<p>oLrem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h3 id="contact">Contact information</h3>
+					<p>email, linkedin, github, phone, whatever,ect ect,</p>
 				</div>
 			</div>
-		</aside>
-		<div class="main-content">
-			<h3 id="brand">My Brand</h3>
-			<p>I am a full stack web developer who is motivated by exploring the constantly evolving landscape of software development. I love learning and applying new concepts to projects. I also value the back and forth nature of developing a project alongside others, learning from their strengths and sharing my own. Nothing is more satisfying than creating or finding a tool that solves a long standing problem!</p>
-			<h3 id="projects">Projects</h3>
-			<p>List of projects with screenshots and snippets</p>
-			<p>rat smasher deluxe, gamers unite, pack-a-pack</p>
-			<h3 id="skills">Skills</h3>
-			<p>List of skills and projects referenced</p>
-			<p>Resume</p>
-			<p>jquery, javascript, html5, css3, bootstrap, react, python, django, postgresql, django, github, node.js</p>
-			<h3 id="about">About Me</h3>
-			<p>More fun oriented section of about me</p>
-			<p>oLrem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-			<h3 id="contat">Contact information</h3>
-			<p>email, linkedin, github, phone, whatever,ect ect,</p>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="./scripts/app.js"></script>
