removed extra files

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<p>This project was made with django and Postgresql to showcase using authentication and CRUD methods. You can create a profile and add upcoming trips and the bags you will be taking. Then you can pack items into your bags from a database of items that are common while traveling. The 'Size' for bags and items that are packable are completely arbitrary, they do not correlate to any real world measurements, i.e. liters which is common for backpack volume measurement. To take this project further I would allow users to create Items for themselves that they are traveling with, alongside commonly brought items. <a href="https://github.com/JackPound/pack-a-pack">GitHub</a></p>
 					</div>
 					<div class='single-project'>
-						<a href='#' target='_blank' class='project-link'>Pathfinder Character Generator</a>
+						<a href='https://github.com/JackPound/CharacterGenerator' target='_blank' class='project-link'>Pathfinder Character Generator</a>
 						<p>This is the project I'm most excited about lately, it is going to be a recreation of character creation in the game Pathfinder:Kingmaker for PC. It will faithfully recreate all aspects of character generation and allow you to plan skills and attributes for all 20 character levels. With this tool you can theorycraft different builds and plan your character's progression through the game to see what abilities are available at later levels without commiting to a build in your current game.</p>
 						<img src='./images/kingmaker2.png' class='project-screenshot'>
 					</div>
